persistence improvements and fixes